--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
         <script defer src="scripts/index.js"></script> 
     </head>
     <body>
-        <div class="col-md-12 row">
-            <div class="col-md-2">
+        <div class="col-md-12 rootDiv">
+            <div class="menuIconBlankDiv"></div>
+            <div class="menuIconDiv"><i class="menuIcon fa-solid fa-bars"></i></div>
+            <div class="col-md-2 menuDiv">
                 <div class="col-md-12 navBtnDiv">
                     <div class="navBtn" id="navBtnOne" data-target="sectionOne" data-section="Section 1" onclick="scrollToSection(event)"><i class="fas fa-dice-one"></i></div>
                     <div class="navBtn" id="navBtnTwo" data-target="sectionTwo" data-section="Section 2" onclick="scrollToSection(event)"><i class="fas fa-dice-two"></i></div>
@@ -25,7 +27,7 @@
                     <div class="navBtn" id="navBtnSix" data-target="sectionSix" data-section="Section 6" onclick="scrollToSection(event)"><i class="fas fa-dice-six"></i></div>
                     <div class="col-md-12" id="navShortcut">
                         <span class="navKeyDesc"><i class="fas fa-keyboard"></i> Keyboard Shortcut</span>
-                        <div class="col-md-12" id="navKeys">
+                        <div class="col-md-12 navKeys">
                             <span class="col-md-2 navKey">1</span>
                             <span class="col-md-2 navKey">2</span>
                             <span class="col-md-2 navKey">3</span>
@@ -41,94 +43,96 @@
                     <i class="fab fa-magento"></i> Adobe Certified Professional Notes
                     <span class="subHeader">(AD0-E711)</span>
                 </div>
-                <div class="col-md-12 markdownCont">
-                    <div class="accordion" id="sectionNotes">
-                        <div class="accordion-item" id="sectionOne">
-                            <h2 class="accordion-header" id="sectionOneHeader">
-                              <button class="accordion-button collapsed" type="button" id="sectionOneBtn" data-bs-toggle="collapse" data-bs-target="#sectionOneCont" aria-expanded="false" aria-controls="sectionOneCont" data-nav-btn="navBtnOne" onclick="updateActiveAccordion(event)">
-                                Section 1: Working with Admin
-                              </button>
-                            </h2>
-                            <div id="sectionOneCont" class="accordion-collapse collapsed collapse" aria-labelledby="sectionOneHeader" data-bs-parent="#sectionNotes">
-                                <div class="accordion-body">
-                                    <zero-md src="markdowns/SECTION1.md"></zero-md>
-                                    <div class="markdownGitEditDiv">
-                                        <a class="markdownGitEdit" href="https://github.com/proscawards/adobe-certified-professional/blob/main/markdowns/SECTION1.md" target="_blank"><i class="fab fa-github"></i> Edit Markdown on Github</a>
+                <div class="col-md-12 markdownOuterCont">
+                    <div class="markdownCont">
+                        <div class="accordion" id="sectionNotes">
+                            <div class="accordion-item" id="sectionOne">
+                                <h2 class="accordion-header" id="sectionOneHeader">
+                                  <button class="accordion-button collapsed" type="button" id="sectionOneBtn" data-bs-toggle="collapse" data-bs-target="#sectionOneCont" aria-expanded="false" aria-controls="sectionOneCont" data-nav-btn="navBtnOne" onclick="updateActiveAccordion(event)">
+                                    Section 1: Working with Admin
+                                  </button>
+                                </h2>
+                                <div id="sectionOneCont" class="accordion-collapse collapsed collapse" aria-labelledby="sectionOneHeader" data-bs-parent="#sectionNotes">
+                                    <div class="accordion-body">
+                                        <zero-md src="markdowns/SECTION1.md"></zero-md>
+                                        <div class="markdownGitEditDiv">
+                                            <a class="markdownGitEdit" href="https://github.com/proscawards/adobe-certified-professional/blob/main/markdowns/SECTION1.md" target="_blank"><i class="fab fa-github"></i> Edit Markdown on Github</a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="accordion-item" id="sectionTwo">
-                            <h2 class="accordion-header" id="sectionTwoHeader">
-                              <button class="accordion-button collapsed" type="button" id="sectionTwoBtn" data-bs-toggle="collapse" data-bs-target="#sectionTwoCont" aria-expanded="false" aria-controls="sectionTwoCont" data-nav-btn="navBtnTwo" onclick="updateActiveAccordion(event)">
-                                Section 2: Architecture
-                              </button>
-                            </h2>
-                            <div id="sectionTwoCont" class="accordion-collapse collapsed collapse" aria-labelledby="sectionTwoHeader" data-bs-parent="#sectionNotes">
-                                <div class="accordion-body">
-                                    <zero-md src="markdowns/SECTION2.md"></zero-md>
-                                    <div class="markdownGitEditDiv">
-                                        <a class="markdownGitEdit" href="https://github.com/proscawards/adobe-certified-professional/blob/main/markdowns/SECTION2.md" target="_blank"><i class="fab fa-github"></i> Edit Markdown on Github</a>
+                            <div class="accordion-item" id="sectionTwo">
+                                <h2 class="accordion-header" id="sectionTwoHeader">
+                                  <button class="accordion-button collapsed" type="button" id="sectionTwoBtn" data-bs-toggle="collapse" data-bs-target="#sectionTwoCont" aria-expanded="false" aria-controls="sectionTwoCont" data-nav-btn="navBtnTwo" onclick="updateActiveAccordion(event)">
+                                    Section 2: Architecture
+                                  </button>
+                                </h2>
+                                <div id="sectionTwoCont" class="accordion-collapse collapsed collapse" aria-labelledby="sectionTwoHeader" data-bs-parent="#sectionNotes">
+                                    <div class="accordion-body">
+                                        <zero-md src="markdowns/SECTION2.md"></zero-md>
+                                        <div class="markdownGitEditDiv">
+                                            <a class="markdownGitEdit" href="https://github.com/proscawards/adobe-certified-professional/blob/main/markdowns/SECTION2.md" target="_blank"><i class="fab fa-github"></i> Edit Markdown on Github</a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="accordion-item" id="sectionThree">
-                            <h2 class="accordion-header" id="sectionThreeHeader">
-                              <button class="accordion-button collapsed" type="button" id="sectionThreeBtn" data-bs-toggle="collapse" data-bs-target="#sectionThreeCont" aria-expanded="false" aria-controls="sectionThreeCont" data-nav-btn="navBtnThree" onclick="updateActiveAccordion(event)">
-                                Section 3: EAV/Database
-                              </button>
-                            </h2>
-                            <div id="sectionThreeCont" class="accordion-collapse collapsed collapse" aria-labelledby="sectionThreeHeader" data-bs-parent="#sectionNotes">
-                                <div class="accordion-body">
-                                    <zero-md src="markdowns/SECTION3.md"></zero-md>
-                                    <div class="markdownGitEditDiv">
-                                        <a class="markdownGitEdit" href="https://github.com/proscawards/adobe-certified-professional/blob/main/markdowns/SECTION3.md" target="_blank"><i class="fab fa-github"></i> Edit Markdown on Github</a>
+                            <div class="accordion-item" id="sectionThree">
+                                <h2 class="accordion-header" id="sectionThreeHeader">
+                                  <button class="accordion-button collapsed" type="button" id="sectionThreeBtn" data-bs-toggle="collapse" data-bs-target="#sectionThreeCont" aria-expanded="false" aria-controls="sectionThreeCont" data-nav-btn="navBtnThree" onclick="updateActiveAccordion(event)">
+                                    Section 3: EAV/Database
+                                  </button>
+                                </h2>
+                                <div id="sectionThreeCont" class="accordion-collapse collapsed collapse" aria-labelledby="sectionThreeHeader" data-bs-parent="#sectionNotes">
+                                    <div class="accordion-body">
+                                        <zero-md src="markdowns/SECTION3.md"></zero-md>
+                                        <div class="markdownGitEditDiv">
+                                            <a class="markdownGitEdit" href="https://github.com/proscawards/adobe-certified-professional/blob/main/markdowns/SECTION3.md" target="_blank"><i class="fab fa-github"></i> Edit Markdown on Github</a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="accordion-item" id="sectionFour">
-                            <h2 class="accordion-header" id="sectionFourHeader">
-                              <button class="accordion-button collapsed" type="button" id="sectionFourBtn" data-bs-toggle="collapse" data-bs-target="#sectionFourCont" aria-expanded="false" aria-controls="sectionFourCont" data-nav-btn="navBtnFour" onclick="updateActiveAccordion(event)">
-                                Section 4: Layout/UI
-                              </button>
-                            </h2>
-                            <div id="sectionFourCont" class="accordion-collapse collapsed collapse" aria-labelledby="sectionFourHeader" data-bs-parent="#sectionNotes">
-                                <div class="accordion-body">
-                                    <zero-md src="markdowns/SECTION4.md"></zero-md>
-                                    <div class="markdownGitEditDiv">
-                                        <a class="markdownGitEdit" href="https://github.com/proscawards/adobe-certified-professional/blob/main/markdowns/SECTION4.md" target="_blank"><i class="fab fa-github"></i> Edit Markdown on Github</a>
+                            <div class="accordion-item" id="sectionFour">
+                                <h2 class="accordion-header" id="sectionFourHeader">
+                                  <button class="accordion-button collapsed" type="button" id="sectionFourBtn" data-bs-toggle="collapse" data-bs-target="#sectionFourCont" aria-expanded="false" aria-controls="sectionFourCont" data-nav-btn="navBtnFour" onclick="updateActiveAccordion(event)">
+                                    Section 4: Layout/UI
+                                  </button>
+                                </h2>
+                                <div id="sectionFourCont" class="accordion-collapse collapsed collapse" aria-labelledby="sectionFourHeader" data-bs-parent="#sectionNotes">
+                                    <div class="accordion-body">
+                                        <zero-md src="markdowns/SECTION4.md"></zero-md>
+                                        <div class="markdownGitEditDiv">
+                                            <a class="markdownGitEdit" href="https://github.com/proscawards/adobe-certified-professional/blob/main/markdowns/SECTION4.md" target="_blank"><i class="fab fa-github"></i> Edit Markdown on Github</a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="accordion-item" id="sectionFive">
-                            <h2 class="accordion-header" id="sectionFiveHeader">
-                              <button class="accordion-button collapsed" type="button" id="sectionFiveBtn" data-bs-toggle="collapse" data-bs-target="#sectionFiveCont" aria-expanded="false" aria-controls="sectionFiveCont" data-nav-btn="navBtnFive" onclick="updateActiveAccordion(event)">
-                                Section 5: Checkout and Sales
-                              </button>
-                            </h2>
-                            <div id="sectionFiveCont" class="accordion-collapse collapsed collapse" aria-labelledby="sectionFiveHeader" data-bs-parent="#sectionNotes">
-                                <div class="accordion-body">
-                                    <zero-md src="markdowns/SECTION5.md"></zero-md>
-                                    <div class="markdownGitEditDiv">
-                                        <a class="markdownGitEdit" href="https://github.com/proscawards/adobe-certified-professional/blob/main/markdowns/SECTION5.md" target="_blank"><i class="fab fa-github"></i> Edit Markdown on Github</a>
+                            <div class="accordion-item" id="sectionFive">
+                                <h2 class="accordion-header" id="sectionFiveHeader">
+                                  <button class="accordion-button collapsed" type="button" id="sectionFiveBtn" data-bs-toggle="collapse" data-bs-target="#sectionFiveCont" aria-expanded="false" aria-controls="sectionFiveCont" data-nav-btn="navBtnFive" onclick="updateActiveAccordion(event)">
+                                    Section 5: Checkout and Sales
+                                  </button>
+                                </h2>
+                                <div id="sectionFiveCont" class="accordion-collapse collapsed collapse" aria-labelledby="sectionFiveHeader" data-bs-parent="#sectionNotes">
+                                    <div class="accordion-body">
+                                        <zero-md src="markdowns/SECTION5.md"></zero-md>
+                                        <div class="markdownGitEditDiv">
+                                            <a class="markdownGitEdit" href="https://github.com/proscawards/adobe-certified-professional/blob/main/markdowns/SECTION5.md" target="_blank"><i class="fab fa-github"></i> Edit Markdown on Github</a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="accordion-item" id="sectionSix">
-                            <h2 class="accordion-header" id="sectionSixHeader">
-                              <button class="accordion-button collapsed" type="button" id="sectionSixBtn" data-bs-toggle="collapse" data-bs-target="#sectionSixCont" aria-expanded="false" aria-controls="sectionSixCont" data-nav-btn="navBtnSix" onclick="updateActiveAccordion(event)">
-                                Section 6: Catalog
-                              </button>
-                            </h2>
-                            <div id="sectionSixCont" class="accordion-collapse collapsed collapse" aria-labelledby="sectionSixHeader" data-bs-parent="#sectionNotes">
-                                <div class="accordion-body">
-                                    <zero-md src="markdowns/SECTION6.md"></zero-md>
-                                    <div class="markdownGitEditDiv">
-                                        <a class="markdownGitEdit" href="https://github.com/proscawards/adobe-certified-professional/blob/main/markdowns/SECTION6.md" target="_blank"><i class="fab fa-github"></i> Edit Markdown on Github</a>
+                            <div class="accordion-item" id="sectionSix">
+                                <h2 class="accordion-header" id="sectionSixHeader">
+                                  <button class="accordion-button collapsed" type="button" id="sectionSixBtn" data-bs-toggle="collapse" data-bs-target="#sectionSixCont" aria-expanded="false" aria-controls="sectionSixCont" data-nav-btn="navBtnSix" onclick="updateActiveAccordion(event)">
+                                    Section 6: Catalog
+                                  </button>
+                                </h2>
+                                <div id="sectionSixCont" class="accordion-collapse collapsed collapse" aria-labelledby="sectionSixHeader" data-bs-parent="#sectionNotes">
+                                    <div class="accordion-body">
+                                        <zero-md src="markdowns/SECTION6.md"></zero-md>
+                                        <div class="markdownGitEditDiv">
+                                            <a class="markdownGitEdit" href="https://github.com/proscawards/adobe-certified-professional/blob/main/markdowns/SECTION6.md" target="_blank"><i class="fab fa-github"></i> Edit Markdown on Github</a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
